@@ -13,7 +13,7 @@
 
   <subscriber
       zcml:condition="installed zope.site"
-      for="zope.location.interfaces.ISite
+      for="zope.component.interfaces.ISite
            zope.app.publication.interfaces.IBeforeTraverseEvent"
       handler="zope.site.threadSiteSubscriber"
       />
